bookservice-canary.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookservice
spec:
  host: bookservice
  subsets:
  - name: blue
    labels:
      deploy_state: blue
  - name: green
    labels:
      deploy_state: green
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookservice
spec:
  hosts:
  - bookservice
  http:
  - route:
    - destination:
        host: bookservice
        subset: blue
      weight: 50
    - destination:
        host: bookservice
        subset: green
      weight: 50
