bookservice-canary_template.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookservice
spec:
  host: bookservice
  subsets:
  - name: blue
    labels:
      version: %%BLUE_VERSION%%
  - name: green
    labels:
      deploy_state: %%GREEN_VERSION%%
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookservice
spec:
  hosts:
  - bookservice
  http:
  - route:
    - destination:
        host: bookservice
        subset: blue
      weight: %%BLUE_PERCENT%%
    - destination:
        host: bookservice
        subset: green
      weight: %%GREEN_PERCENT%%
